--- a/assignment5_kevinma.ipynb
+++ b/assignment5_kevinma.ipynb
@@ -87,7 +87,7 @@
     "import plotly.express as px\n",
     "\n",
     "# Load csv file\n",
-    "raw_data = pd.read_csv('/Users/kevinma/Desktop/gdp_pcap.csv')\n",
+    "raw_data = pd.read_csv('gdp_pcap.csv')\n",
     "\n",
     "# check the first 5 rows of the data and the data types\n",
     "print(raw_data.head())\n",
